remove: property command: tab complete fix feat: NBT api